# mate

./: README.md
defs/: term.lua
examples/: 1.lua  10.lua  2.lua  3.lua  4.lua  5.lua  6.lua  7.lua  8.lua  9.lua  main.lua  setup.lua
src/: app.lua  box.lua  buffer.lua  input.lua  style.lua
src/components/: fps.lua  indexed_view.lua  line_input.lua  list.lua  log.lua  spinner.lua  timer.lua
src/queue/: circular.lua
term/: Cargo.toml
term/src/: lib.rs
term/src/bindings/: buffer.rs  mod.rs  unicode.rs
